syntax = "proto3";

package nestedpb;

service NestedService {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc MultiLevelNest (MultiLevelNestReq) returns (MultiLevelNestResp) {}
}

message PingRequest {
	NestedVal some_nested_value = 1;
}

message PingResponse {
	OtherNestedVal some_other_value = 1;
}

message MultiLevelNestReq {
  TopLevelMsg a = 1;
  NestedVal repeated_msg = 2;
}

message MultiLevelNestResp {
  OtherLevelMsg a = 1;
  OtherNestedVal other_repeated_msg = 2;
}

message NestedVal {
	int64 some_value = 1;
}

message OtherNestedVal {
	string some_string = 1;
}

message TopLevelMsg {
  OtherLevelMsg a = 1;
  NestedVal b = 2;
  string some = 3;
}

message OtherLevelMsg {
  OtherNestedVal val = 1;
  int64 value = 2;
}
